# rust-67087

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
binary/: Cargo.toml
binary/src/: main.rs
