[package]
name = "binary"
version = "0.1.0"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = { path = "../library", version = "0.1.0" }
tokio = { version = "0.2.10", features = ["macros", "rt-threaded"] }
